--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ backcall==0.2.0
 backports.entry-points-selectable==1.1.0
 bandit==1.7.0
 bleach==4.1.0
+boto3==1.20.27
+botocore==1.23.27
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
@@ -16,11 +18,9 @@ debugpy==1.4.3
 decorator==5.1.0
 defusedxml==0.7.1
 distlib==0.3.2
-dj-database-url==0.5.0
 Django==3.2.9
 django-allauth==0.41.0
-django-countries==7.2.1
-django-crispy-forms==1.13.0
+django-storages==1.12.3
 docutils==0.17.1
 entrypoints==0.3
 filelock==3.0.12
@@ -29,7 +29,6 @@ flake8-django==1.1.2
 flake8-flask==0.9.3
 gitdb==4.0.7
 GitPython==3.1.18
-gunicorn==20.1.0
 idna==3.2
 importlib-metadata==4.8.1
 ipykernel==6.4.1
@@ -39,6 +38,7 @@ isort==5.9.3
 jedi==0.18.0
 jeepney==0.7.1
 Jinja2==3.0.1
+jmespath==0.10.0
 jsonschema==3.2.0
 jupyter-client==7.0.2
 jupyter-core==4.7.1
@@ -64,13 +64,11 @@ pbr==5.6.0
 pep8==1.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.0.0
 pipenv==2021.5.29
 pkginfo==1.7.1
 platformdirs==2.3.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
-psycopg2-binary==2.9.3
 ptyprocess==0.7.0
 pycodestyle==2.7.0
 pycparser==2.20
@@ -93,6 +91,7 @@ requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rfc3986==1.5.0
 rope==0.19.0
+s3transfer==0.5.0
 SecretStorage==3.3.1
 Send2Trash==1.8.0
 six==1.16.0
@@ -100,7 +99,6 @@ smmap==4.0.0
 snowballstemmer==2.1.0
 sqlparse==0.4.2
 stevedore==3.4.0
-stripe==2.64.0
 terminado==0.12.1
 testpath==0.5.0
 toml==0.10.2
