--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ debugpy==1.4.3
 decorator==5.1.0
 defusedxml==0.7.1
 distlib==0.3.2
+dj-database-url==0.5.0
 Django==3.2.9
 django-allauth==0.41.0
 django-storages==1.12.3
