--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ distlib==0.3.2
 dj-database-url==0.5.0
 Django==3.2.9
 django-allauth==0.41.0
+django-countries==7.2.1
+django-crispy-forms==1.13.0
 django-storages==1.12.3
 docutils==0.17.1
 entrypoints==0.3
@@ -65,6 +67,7 @@ pbr==5.6.0
 pep8==1.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.0.0
 pipenv==2021.5.29
 pkginfo==1.7.1
 platformdirs==2.3.0
@@ -100,6 +103,7 @@ smmap==4.0.0
 snowballstemmer==2.1.0
 sqlparse==0.4.2
 stevedore==3.4.0
+stripe==2.64.0
 terminado==0.12.1
 testpath==0.5.0
 toml==0.10.2
