--- a/requirements.txt
+++ b/requirements.txt
@@ -73,6 +73,7 @@ pkginfo==1.7.1
 platformdirs==2.3.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
+psycopg2==2.9.3
 ptyprocess==0.7.0
 pycodestyle==2.7.0
 pycparser==2.20
