--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,28 @@ backports.zoneinfo==0.2.1
 boto3==1.20.27
 botocore==1.23.27
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.9
+cryptography==36.0.1
+defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==4.0.1
+django-allauth==0.47.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
 django-storages==1.12.3
+gunicorn==20.1.0
 idna==3.3
 jmespath==0.10.0
+oauthlib==3.1.1
 Pillow==9.0.0
 psycopg2==2.9.3
+pycparser==2.21
+PyJWT==2.3.0
 python-dateutil==2.8.2
+python3-openid==3.2.0
 requests==2.27.0
+requests-oauthlib==1.3.0
 s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.2
