--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ backports.entry-points-selectable==1.1.0
 backports.zoneinfo==0.2.1
 bandit==1.7.0
 bleach==4.1.0
+boto3==1.20.28
+botocore==1.23.28
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
@@ -40,6 +42,7 @@ isort==5.9.3
 jedi==0.18.0
 jeepney==0.7.1
 Jinja2==3.0.1
+jmespath==0.10.0
 jsonschema==3.2.0
 jupyter-client==7.0.2
 jupyter-core==4.7.1
@@ -71,6 +74,7 @@ pkginfo==1.7.1
 platformdirs==2.3.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
+psycopg2==2.9.3
 ptyprocess==0.7.0
 pycodestyle==2.7.0
 pycparser==2.20
@@ -93,6 +97,7 @@ requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rfc3986==1.5.0
 rope==0.19.0
+s3transfer==0.5.0
 SecretStorage==3.3.1
 Send2Trash==1.8.0
 six==1.16.0
